--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "yiisoft/yii2": "*"
+        "yiisoft/yii2": "*",
+        "bower-asset/bootstrap-markdown": "2.*"
     }
 }
